tests/toylang/neg/001472_mutation.toylang
program a = { var a : var a : bool int; } .
